@@ -1,5 +1,11 @@
 2006-07-15 Erik Hjortsberg  <erik@katastrof.nu>
 
+	* src/components/ogre/modeldefinitions/items.modeldef.xml, src/components/ogre/modeldefinitions/outdoor_structures.modeldef: updated modeldefinitions, also now with experimental definitions with entity mappings.
+	* src/components/ogre/widgets/InspectWidget.cpp: also show scalar velocity
+	* make_dist_media.sh.in: updated to also include textures referenced by texture_alias
+
+2006-07-15 Erik Hjortsberg  <erik@katastrof.nu>
+
 	* media/materials/base_scripts/base.material, media/materials/programs/All_In_Wonder.cg, media/materials/scripts/buildings.material, media/materials/scripts/creatures.material, media/materials/scripts/furniture.material: updated material definitions
 
 2006-07-15 Erik Hjortsberg  <erik@katastrof.nu>
